# coverage

./: README.md
coverage-pass/: CMakeLists.txt
coverage-pass/coverage/: CMHelper.cpp  CMHelper.h  CMakeLists.txt  Coverage.cpp
coverage-plugin/coverage/: CMakeLists.txt
coverage-plugin/coverage-ast/: CMakeLists.txt  CoverageAST.cpp
coverage-plugin/src/: CoverageAST.cpp
tests/c/: .coverage2.log.swp  README  ast  basic-call.c  basic-inline.bc  basic.bc  basic.c  basic.ll  debug.ast  debug.c  func  func.ast  global-struct.bc  global-struct.c  global-struct.ll  pointers.bc  pointers.c  pointers.ll  simple-normal.ll  simple-reg.ll  simple.bc  simple.c  struct-pointer.c  struct.bc  struct.c  struct.ll
tests/fortran/: a.out  hello-llvm.bc  hello-llvm.ll  hello.f90  main-llvm.S  main-llvm.bc  sum-llvm.bc  sum-llvm.ll  sum.f90
